--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.4.8",
     "cra-template": "1.2.0",
     "crypto-browserify": "^3.12.1",
+    "dotenv": "^17.2.1",
     "emailjs-com": "^3.2.0",
     "express": "^4.21.2",
     "lottie-react": "^2.4.1",
@@ -22,6 +23,7 @@
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-dotenv": "^0.1.3",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
