--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
     "react-dotenv": "^0.1.3",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "rsuite": "^5.79.1",
     "start": "^5.1.0",
     "typewriter-effect": "^2.21.0"
