--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,28 +5,23 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^7.0.2",
+    "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
-    "@mui/x-charts": "^7.28.0",
+    "@mui/x-charts": "^7.0.0",
+    "ajv": "^8.17.1",
     "animate.css": "^4.1.1",
-    "axios": "^1.8.4",
+    "axios": "^1.7.9",
     "chart.js": "^4.4.8",
-    "cra-template": "1.2.0",
-    "crypto-browserify": "^3.12.1",
-    "emailjs-com": "^3.2.0",
-    "express": "^4.21.2",
     "lottie-react": "^2.4.1",
-    "nodemailer": "^7.0.5",
-    "react": "^19.1.0",
+    "react": "^18.3.1",
     "react-animate-on-scroll": "^2.1.9",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.1.5",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "rsuite": "^5.79.1",
-    "start": "^5.1.0",
     "typewriter-effect": "^2.21.0"
   },
   "scripts": {
